the country name is now displayed in a toggled popup window that will house the recipe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,22 @@ path:hover{
 #my-svg-element {
     pointer-events: all;
   }
+
+  /** -------------------- popups ----------------------- **/
+  #popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 600px;
+    height: 500px;
+    background-color: white;
+    border: 1px solid black;
+    text-align: center;
+  }
+
+  .hidden{
+    display: none;
+  }
