--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,11 +18,11 @@ ul {
   bottom: 0;
   right: 0;
   margin: auto;
-  width: 600px;
-  height: 500px;
   background-color: white;
   border: 1px solid black;
   text-align: center;
+  width: 50%;
+  height: fit-content;
 }
 
 .hidden {
